		gone with JZlib (http://www.jcraft.com/jzlib/).  So as not to make
		ECJ reliant on JZlib for compiling, we're setting up the streams
		dynamically using reflection in two new static methods in Output
		(makeCompressedInputStream, makeCompressedOutputStream).
		ec.util.CompressingInputStream and ec.util.CompressingOutputStream
		are hereby deleted.
	Updated ERC.java to be a bit easier to implement, and with better docs.
	Subpopulation now has a default base:  ec.subpop   This marks the first
		actual use of the ECDefaults class.  Population doesn't have one
		yet, making it the only Group without one.  Because it'd be
		sort of a bit silly I guess, saying 'ec.pop...' instead of 'pop...'
	Species wasn't including the default base for loading the Fitness.  Fixed.
		Thanks to Peter Drake <drake@lclark.edu>
	Tweak to Console to fix parameters not being updated properly.  Thanks to
		Bob Orchard <Bob.Orchard@nrc-cnrc.gc.ca>
	Eliminated the 'store' and 'flush' parameter options.  You can still modify
		the Output's behavior programatically.  This change was long
		overdue: these two features just added complexity to an already too
		complex parameter file. 

19	Best. Prerelease. Ever.
	Modified ParameterDatabase's parseInt and parseLong methods to allow double
		values ending in .0 to serve as legal numbers.
	Added Keith Sullivan to the contributors list
	Added GraphViz output to GP trees
	Bug fix in mixed-up warning messages in GPNodeBuilder
	Fixed Tutorial3 to reflect new population writing format.  Thanks to
		Myron Tuttle <myrongt@gmail.com>
	Added ec.util.LocalHost class to replace known bug in Java's getLocalHost
		method.  This class relies on the NetworkInterface class in
		Java 1.4, which is going to bump ECJ to require 1.4.  Thanks to 
		Tomasz Nowak <nowak2000@poczta.onet.pl>
	Bumped classfile version in Makefile to 1.4 accordingly.
	Fixed erroneous documentation in FloatVectorSpecies and IntegerVectorSpecies